--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@ohqu/geist-design-icons",
+  "name": "@whouu/geist-design-icons",
   "version": "0.0.1",
   "description": "svg icon library for geist-design",
   "type": "module",
